# job_finder_agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  config.example.json  config.schema.json  get.ps1  get.sh  install.ps1  install.sh  llms.md  pyproject.toml  ralphex-setup.md  scoring.md
design/: design-tokens.md  job-agent-prototype.html
docs/: FEATURES.md  process-flow.md
docs/plans/: job-agent-plan.md
docs/plans/completed/: job-agent-plan.md
prompts/: README.md  contact-investigator.md  contact-search.md  cover-letter.md  default.md  normalize.md  scoring.md  search-map-build.md
searxng/: settings.yml
src/job_agent/: __init__.py  calibrate.py  cli.py  config.py  dedup.py  embeddings.py  matchstore.py  mcp_server.py  models.py  normalize.py  pipeline.py  prefilter.py  presentation.py  scheduler.py  scoring.py  titlefilter.py  warm_embeddings.py
src/job_agent/collectors/: __init__.py  base.py  career_sites.py  getmatch.py  habr.py  linkedin.py  telegram_private.py  telegram_public.py  vseti.py
src/job_agent/engines/: __init__.py  api_key.py  base.py  cli.py  fake.py  ollama.py
src/job_agent/enrich/: contacts.py  cover.py  investigator.py
src/job_agent/output/: __init__.py  bot.py  summary.py  xlsx.py
src/job_agent/websearch/: __init__.py  base.py  fake.py  searxng.py  serp.py
tests/: test_aggregators.py  test_bot.py  test_bot_connect.py  test_calibrate.py  test_career_sites.py  test_config.py  test_contacts.py  test_cover.py  test_dedup.py  test_embeddings.py  test_engine_adapters.py  test_engine_status.py  test_engines.py  test_hh.py  test_investigator.py  test_linkedin_collector.py  test_login_flow.py  test_matchstore.py  test_mcp_server.py  test_models.py  test_native.py  test_normalize.py  test_notify.py  test_pipeline.py  test_prefilter.py  test_presentation.py  test_read_document.py  test_readme_links.py  test_runner.py  test_scheduler.py  test_scoring.py  test_smoke.py  test_telegram_login.py  test_telegram_private.py  test_telegram_public.py  test_titlefilter.py  test_websearch.py  test_webui.py  test_xlsx.py
tests/fixtures/: getmatch_vacancies.json  habr_vacancies.html  tme_channel.html  vseti_jobs.html
webui/: __init__.py  app.py  bot_connect.py  components.py  engine_status.py  env_store.py  forms.py  hh.py  login_flow.py  native.py  notify.py  render.py  runner.py  telegram_login.py
webui/static/css/: components.css  tabler-icons.css  tokens.css
webui/static/js/: agent.js  app.js  bot.js  contacts.js  engine.js  results.js  run.js  settings.js  (+1 more)
(+3 files in other folders)
