[project]
name = "job-agent"
version = "0.1.0"
description = "Локальный агент подбора вакансий (BYO AI, всё на машине пользователя)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "fastembed>=0.3",
    "openpyxl>=3.1",
    "python-telegram-bot>=21.0",
    "telethon>=1.34",
    "jsonschema>=4.21",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
job-agent = "job_agent.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_agent"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
